--- a/src/private/preserve3d02.html
+++ b/src/private/preserve3d02.html
@@ -134,6 +134,7 @@
     };
 
     var isPreserve3dSupported = function () {
+      if (navigator.userAgent.indexOf('Trident/') > 0) { return false; }
       if (!transformStyle) {
         transformStyle = getTransformStyle() ||
           getTransformStyle('-webkit-') || 'flat';
