--- a/public/private/preserve3d02.html
+++ b/public/private/preserve3d02.html
@@ -104,6 +104,7 @@
     };
 
     var isPreserve3dSupported = function () {
+      if (navigator.userAgent.indexOf('Trident/') > 0) { return false; }
       if (!transformStyle) {
         transformStyle = getTransformStyle() ||
           getTransformStyle('-webkit-') || 'flat';
