--- a/src/private/index.html
+++ b/src/private/index.html
@@ -48,6 +48,8 @@
         style="text-decoration: none;">Fixed-bg and effect unset</a></li>
       <li><a href="filter04.html"
         style="text-decoration: none;">Blur on container, inline element and in table</a></li>
+      <li><a href="https://developer.mozilla.org/samples/webgl/sample6/index.html"
+        style="text-decoration: none;">WebGL demo</a></li>
     </ul>
   </body>
 </html>
