--- a/src/html/aside-other-links.html
+++ b/src/html/aside-other-links.html
@@ -32,4 +32,8 @@
     "http://sassmeister.com/"
     >SassMeister</a>
   </li>
+  <li><a target="_blank" href=
+    "http://reactjs.net/getting-started/aspnet5.html"
+    >Getting started with ReactJS.NET on ASP.NET 5</a>
+  </li>
 </ul>
