--- a/src/private/index.html
+++ b/src/private/index.html
@@ -50,6 +50,8 @@
         style="text-decoration: none;">Blur on container, inline element and in table</a></li>
       <li><a href="https://developer.mozilla.org/samples/webgl/sample6/index.html"
         style="text-decoration: none;">WebGL demo</a></li>
+      <li><a href="svgasimg01.html"
+        style="text-decoration: none;">SVG-as-image</a></li>
     </ul>
   </body>
 </html>
