--- a/src/private/svgasimg01.html
+++ b/src/private/svgasimg01.html
@@ -2,6 +2,11 @@
 <head>
 </head>
 <body>
-  <img width="100" height="100" src="http://codedread.com/clipart/kthoom.svgz">
+  <div>
+    <img width="100" height="100" src="http://codedread.com/clipart/kthoom.svgz">
+  </div>
+  <div>
+    <img src="http://c.s-microsoft.com/en-us/CMSImages/Srfc_Pro4AndBook_Mobile_1002_540x304_EN_US.jpg?version=e0f0184c-ed9e-54b2-95f3-c5f6082a7866">
+  </div>
 </body>
 </html>
