--- a/src/private/svgasimg01.html
+++ b/src/private/svgasimg01.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+  <META HTTP-EQUIV="Expires" CONTENT="-1">
 </head>
 <body>
   <div>
