--- a/src/private/svgasimg01.html
+++ b/src/private/svgasimg01.html
@@ -6,17 +6,17 @@
   <meta HTTP-EQUIV="Pragma" CONTENT="no-cache">
   <meta HTTP-EQUIV="Expires" CONTENT="-1">
   <style>
-  .jpg {
+  img {
     width: 100%;
   }
   </style>
 </head>
 <body>
   <div>
-    <img width="100" height="100" src="http://codedread.com/clipart/kthoom.svgz">
+    <img src="http://codedread.com/clipart/kthoom.svgz">
   </div>
   <div>
-    <img class="jpg" src="http://c.s-microsoft.com/en-us/CMSImages/Srfc_Pro4AndBook_Mobile_1002_540x304_EN_US.jpg?version=e0f0184c-ed9e-54b2-95f3-c5f6082a7866">
+    <img src="http://c.s-microsoft.com/en-us/CMSImages/Srfc_Pro4AndBook_Mobile_1002_540x304_EN_US.jpg?version=e0f0184c-ed9e-54b2-95f3-c5f6082a7866">
   </div>
 </body>
 </html>
