--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,6 @@
         <section data-article-mutation-observers id="article-mutation-observers"></section>
         <section data-article-publicvsprivate id="article-publicvsprivate"></section>
         <section data-article-objects-by-ref></section>
-        <section data-article-ie8></section>
       </article>
       <aside class="aside aside-2 delayed"><a id="aside-2"></a>
         <section data-aside-js-links></section>
@@ -61,8 +60,8 @@
     <script src="script.js"></script>
     <![endif]>
     <!--[if IE]>
-    <h3><a target="_blank" href="http://support.microsoft.com/gp/Microsoft-Internet-Explorer">
-      <span style="color:red">Internet Explorer Support Lifecycle Policy</span></a>
+    <h3><a target="_blank" href="http://www.microsoft.com/Microsoft-Edge">
+      Introducing Microsoft Edge</a>
     </h3>
     <![endif]-->
   </body>
