--- a/public/private/preserve3d02.html
+++ b/public/private/preserve3d02.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html><html lang="en"><head><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Preserve-3D</title><style>#scroller {
+<!DOCTYPE html><html lang="en"><head><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Preserve-3D</title><style>body {
+    display: flex;
+    min-height: 100vh;
+    margin: 0;
+  }
+
+  #scroller {
     position: relative;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -66,14 +72,11 @@
   }
 
   .container {
-    margin-top: 8em;
+    max-width: 90%;
+    margin: auto;
   }
 
   @media (min-width: 32rem) {
-    .container {
-      margin-top: 4em;
-    }
-
     .text-title {
       font-size: 13pt;
     }
@@ -81,9 +84,7 @@
 
   @media (min-width: 54rem) {
     .container {
-      width: 70%;
-      margin-left: 15%;
-      margin-top: 2em;
+      max-width: 70%;
     }
   }</style></head><body><div class="container"><div class="world"><div id="roller"><div id="face-top" class="face"><img class="bing-image"></div><div id="face-front" class="face"><img class="bing-image"></div><div id="face-bottom" class="face"><img class="bing-image"></div></div></div><div id="scroller"><script id="images-template" type="text/x-handlebars-template">{{#each entries}}
         <div class="image-frame">
