--- a/src/private/preserve3d02.html
+++ b/src/private/preserve3d02.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Preserve-3D</title>
   <style>
+  body {
+    display: flex;
+    min-height: 100vh;
+    margin: 0;
+  }
+
   #scroller {
     position: relative;
     overflow-x: hidden;
@@ -74,14 +80,11 @@
   }
 
   .container {
-    margin-top: 8em;
+    max-width: 90%;
+    margin: auto;
   }
 
   @media (min-width: 32rem) {
-    .container {
-      margin-top: 4em;
-    }
-
     .text-title {
       font-size: 13pt;
     }
@@ -89,9 +92,7 @@
 
   @media (min-width: 54rem) {
     .container {
-      width: 70%;
-      margin-left: 15%;
-      margin-top: 2em;
+      max-width: 70%;
     }
   }
   </style>
