--- a/public/private/preserve3d02.html
+++ b/public/private/preserve3d02.html
@@ -72,7 +72,7 @@
   }
 
   .container {
-    max-width: 90%;
+    max-width: 85%;
     margin: auto;
   }
 
@@ -82,7 +82,7 @@
     }
   }
 
-  @media (min-width: 800px) {
+  @media (min-width: 54rem) {
     .container {
       max-width: 70%;
     }
