--- a/src/private/preserve3d02.html
+++ b/src/private/preserve3d02.html
@@ -80,7 +80,7 @@
   }
 
   .container {
-    max-width: 90%;
+    max-width: 85%;
     margin: auto;
   }
 
@@ -90,7 +90,7 @@
     }
   }
 
-  @media (min-width: 800px) {
+  @media (min-width: 54rem) {
     .container {
       max-width: 70%;
     }
