--- a/public/private/preserve3d02.html
+++ b/public/private/preserve3d02.html
@@ -72,7 +72,6 @@
   }
 
   .container {
-    max-width: 80%;
     margin: auto;
   }
 
@@ -82,7 +81,7 @@
     }
   }
 
-  @media (min-width: 54rem) {
+  @media (min-width: 800px) {
     .container {
       max-width: 70%;
     }
