--- a/src/private/preserve3d02.html
+++ b/src/private/preserve3d02.html
@@ -7,6 +7,7 @@
   <title>Preserve-3D</title>
   <style>
   body {
+    display: -webkit-flex;
     display: flex;
     min-height: 100vh;
     margin: 0;
