--- a/src/ie8/index.html
+++ b/src/ie8/index.html
@@ -12,9 +12,22 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <link rel="shortcut icon" href="/images/favicon.ico" />
     <title>Internet Explorer 8</title>
+    <![if !IE]>
+    <style>
+    @media only screen and (max-width: 800px) {
+      td {
+        display: block;
+        width: 100%;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+      }
+    }
+    </style>
+    <![endif]>
   </head>
   <body><a id="topOfPage"></a>
-    <table border="0" cellspacing="0">
+    <table border="0" cellspacing="0" cellpadding="0">
     <tr><td colspan="2" class="fakewrapper header" width="100%">
       <h3>Internet Explorer 8</h3>
     </td></tr>
@@ -159,6 +172,10 @@
         <li><a target="_blank" href=
           "https://github.com/scottjehl/Respond"
           >Respond.js</a>
+        </li>
+        <li><a target="_blank" href=
+          "http://responsiveemailpatterns.com/"
+          >Responsive Email Patterns</a>
         </li>
       </ul>
     </div>
