--- a/src/private/index.html
+++ b/src/private/index.html
@@ -52,6 +52,8 @@
         style="text-decoration: none;">WebGL demo</a></li>
       <li><a href="svgasimg01.html"
         style="text-decoration: none;">SVG-as-image</a></li>
+      <li><a href="Z6310H.html"
+        style="text-decoration: none;">Site issue with touch</a></li>
     </ul>
   </body>
 </html>
