--- a/public/private/Z6310H.html
+++ b/public/private/Z6310H.html
@@ -18,6 +18,9 @@
     -ms-user-select: none;
     user-select: none;
   }
+  input, label {
+    vertical-align: middle;
+  }
   input[type=checkbox] {
     margin-right: 8px;
   }
