--- a/src/private/Z6310H.html
+++ b/src/private/Z6310H.html
@@ -9,17 +9,17 @@
   var windows = ua.indexOf("windows") > -1;
   </script>
   <style>
+  * {
+    font-family: "Open Sans", "Segoe UI", "Helvetica Neue", sans-serif;
+    cursor: default;
+  }
   body {
     margin: 0;
     height: 100vh;
     overflow: hidden;
   }
   div {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    transition: left 0.5s;
+    background-color: rgba(0, 0, 0, 0);
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -29,9 +29,21 @@
   }
   input, label {
     vertical-align: middle;
+    cursor: pointer;
   }
   input[type=checkbox] {
     margin-right: 8px;
+  }
+  .page {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    transition: left 0.5s;
+  }
+  .shifted {
+    left: 100%;
+    transition: left 0.5s;
   }
   .red {
     background-color: red;
@@ -41,22 +53,48 @@
   }
   .log {
     position: relative;
+    width: 50%;
     height: 1em;
-    background-color: rgba(0, 0, 0, 0);
     color: white;
-    font-family: "Open Sans", "Segoe UI", "Helvetica Neue", sans-serif;
     font-size: 18pt;
     padding: 1em 0 0 1em;
   }
-  .shifted {
-    left: 100%;
-    transition: left 0.5s;
+  .button {
+    cursor: pointer;
+  }
+  .left, .right {
+    position: absolute;
+    width: 50px;
+    height: 100%;
+    padding: 24px;
+    display: flex;
+    align-items: center;
+  }
+  .right {
+    right: 0;
+  }
+  .arrow {
+    width: 50px;
+    height: 50px;
+    font-size: 36px;
+    text-align: center;
+    color: darkgray;
+    border: 1px solid darkgray;
+    border-radius: 50%;
   }
   </style>
 </head>
 <body>
-  <div class="red"></div>
-  <div class="green" id="shift"></div>
+  <div class="page red">
+    <div class="button right">
+      <div class="button arrow">&gt;</div>
+    </div>
+  </div>
+  <div class="page green" id="shift">
+    <div class="button left">
+      <div class="button arrow">&lt;</div>
+    </div>
+  </div>
   <div class="log" id="windows"></div>
   <div class="log" id="android"></div>
   <div class="log">
@@ -65,7 +103,7 @@
   </div>
   <script>
   function Z6310H(a) {
-    if (a.target.tagName !== "DIV") { return; }
+    if (!a.target.classList.contains("button")) { return; }
     if (windows) {
       try {
         if (document.getElementById('fix').checked) {
@@ -84,8 +122,8 @@
   } else {
     document.addEventListener("mousedown", Z6310H, false);
   }
-  document.getElementById('windows').innerText = "windows: " + windows;
-  document.getElementById('android').innerText = "android: " + android;
+  document.getElementById('windows').textContent = "windows: " + windows;
+  document.getElementById('android').textContent = "android: " + android;
   </script>
 </body>
 </html>
