--- a/public/private/Z6310H.html
+++ b/public/private/Z6310H.html
@@ -57,22 +57,28 @@
     position: absolute;
     width: 50px;
     height: 100%;
-    padding: 24px;
+    padding: 1em;
     display: flex;
     align-items: center;
   }
   .right {
     right: 0;
   }
-  .arrow {
+  .arrow-circle {
     width: 50px;
     height: 50px;
-    font-size: 36px;
-    text-align: center;
-    color: darkgray;
+    box-sizing: border-box;
     border: 1px solid darkgray;
     border-radius: 50%;
-  }</style></head><body><div class="page red"><div class="button right"><div class="button arrow">&gt;</div></div></div><div class="page green" id="shift"><div class="button left"><div class="button arrow">&lt;</div></div></div><div class="log" id="windows"></div><div class="log" id="android"></div><div class="log"><input type="checkbox" id="fix"><label for="fix">fix</label></div><script>function Z6310H(a) {
+    display: flex;
+    align-items: center;
+  }
+  .arrow {
+    font-size: 18px;
+    font-weight: bold;
+    color: darkgray;
+    margin: 0 auto;
+  }</style></head><body><div class="page red"><div class="button right"><div class="arrow-circle"><div class="button arrow">&gt;</div></div></div></div><div class="page green" id="shift"><div class="button left"><div class="arrow-circle"><div class="button arrow">&lt;</div></div></div></div><div class="log" id="windows"></div><div class="log" id="android"></div><div class="log"><input type="checkbox" id="fix"><label for="fix">fix</label></div><script>function Z6310H(a) {
     if (!a.target.classList.contains("button")) { return; }
     if (windows) {
       try {
