fill a blind spot

--- a/src/private/Z6310H.html
+++ b/src/private/Z6310H.html
@@ -83,7 +83,7 @@
     align-items: center;
   }
   .arrow {
-    font-size: 18px;
+    font-size: 18pt;
     font-weight: bold;
     color: darkgray;
     margin: 0 auto;
@@ -93,14 +93,14 @@
 <body>
   <div class="page red">
     <div class="button right">
-      <div class="arrow-circle ">
+      <div class="button arrow-circle ">
         <div class="button arrow">&gt;</div>
       </div>
     </div>
   </div>
   <div class="page green" id="shift">
     <div class="button left">
-      <div class="arrow-circle ">
+      <div class="button arrow-circle ">
         <div class="button arrow">&lt;</div>
       </div>
     </div>
