--- a/public/private/Z6310H.html
+++ b/public/private/Z6310H.html
@@ -74,11 +74,11 @@
     align-items: center;
   }
   .arrow {
-    font-size: 18px;
+    font-size: 18pt;
     font-weight: bold;
     color: darkgray;
     margin: 0 auto;
-  }</style></head><body><div class="page red"><div class="button right"><div class="arrow-circle"><div class="button arrow">&gt;</div></div></div></div><div class="page green" id="shift"><div class="button left"><div class="arrow-circle"><div class="button arrow">&lt;</div></div></div></div><div class="log" id="windows"></div><div class="log" id="android"></div><div class="log"><input type="checkbox" id="fix"><label for="fix">fix</label></div><script>function Z6310H(a) {
+  }</style></head><body><div class="page red"><div class="button right"><div class="button arrow-circle"><div class="button arrow">&gt;</div></div></div></div><div class="page green" id="shift"><div class="button left"><div class="button arrow-circle"><div class="button arrow">&lt;</div></div></div></div><div class="log" id="windows"></div><div class="log" id="android"></div><div class="log"><input type="checkbox" id="fix"><label for="fix">fix</label></div><script>function Z6310H(a) {
     if (!a.target.classList.contains("button")) { return; }
     if (windows) {
       try {
