--- a/src/private/Z6310H.html
+++ b/src/private/Z6310H.html
@@ -45,8 +45,8 @@
     left: 100%;
     transition: left 0.5s;
   }
-  .red {
-    background-color: red;
+  .blue {
+    background-color: blue;
   }
   .green {
     background-color: green;
@@ -91,14 +91,14 @@
   </style>
 </head>
 <body>
-  <div class="page red">
+  <div class="page green">
     <div class="button right">
       <div class="button arrow-circle ">
         <div class="button arrow">&gt;</div>
       </div>
     </div>
   </div>
-  <div class="page green" id="shift">
+  <div class="page blue" id="shift">
     <div class="button left">
       <div class="button arrow-circle ">
         <div class="button arrow">&lt;</div>
