--- a/public/private/Z6310H.html
+++ b/public/private/Z6310H.html
@@ -78,6 +78,7 @@
     font-weight: bold;
     color: darkgray;
     margin: 0 auto;
+    padding-bottom: 0.15em;
   }</style></head><body><div class="page green"><div class="button right"><div class="button arrow-circle"><div class="button arrow">&gt;</div></div></div></div><div class="page blue" id="shift"><div class="button left"><div class="button arrow-circle"><div class="button arrow">&lt;</div></div></div></div><div class="log" id="windows"></div><div class="log" id="android"></div><div class="log"><input type="checkbox" id="fix"><label for="fix">fix</label></div><script>function Z6310H(a) {
     if (!a.target.classList.contains("button")) { return; }
     if (windows) {
