add vendor prefix

--- a/src/private/Z6310H.html
+++ b/src/private/Z6310H.html
@@ -67,7 +67,9 @@
     width: 50px;
     height: 100%;
     padding: 1em;
+    display: -webkit-flex;
     display: flex;
+    -webkit-align-items: center;
     align-items: center;
   }
   .right {
@@ -79,7 +81,9 @@
     box-sizing: border-box;
     border: 1px solid darkgray;
     border-radius: 50%;
+    display: -webkit-flex;
     display: flex;
+    -webkit-align-items: center;
     align-items: center;
   }
   .arrow {
