set the size of the sprite

--- a/public/private/Z6310H.html
+++ b/public/private/Z6310H.html
@@ -72,6 +72,8 @@
     display: none;
   }
   #arrow-circle {
+    width: 50px;
+    height: 50px;
     fill: darkgray;
   }</style></head><body><svg class="symbol"><symbol id="arrow-circle" viewbox="0 0 1024 1024"><path class="button" d="M512 1024c282.77 0 512-229.23 512-512s-229.23-512-512-512-512 229.23-512 512 229.23 512 512 512zM512 96c229.75 0 416 186.25 416 416s-186.25 416-416 416-416-186.25-416-416 186.25-416 416-416z"></path><path class="button" d="M669.256 317.256l-90.512-90.512-285.254 285.256 285.256 285.254 90.508-90.508-194.744-194.746z"></path></symbol></svg><div class="page green"><div class="button right"><svg class="button"><use xlink:href="#arrow-circle" class="button"></use></svg></div></div><div class="page blue" id="shift"><div class="button left"><svg class="button"><use xlink:href="#arrow-circle" class="button"></use></svg></div></div><div class="log" id="windows"></div><div class="log" id="android"></div><div class="log"><input type="checkbox" id="fix"><label for="fix">fix</label></div><div class="log"><input type="checkbox" id="cancel"><label for="cancel">cancel</label></div><script>function Z6310H(a) {
     if (!a.target.classList.contains("button")) { return; }
