--- a/src/private/Z6310H.html
+++ b/src/private/Z6310H.html
@@ -80,9 +80,11 @@
   .symbol {
     display: none;
   }
-  #arrow-circle {
+  svg.button {
     width: 50px;
     height: 50px;
+  }
+  #arrow-circle {
     fill: darkgray;
   }
   </style>
