Works in-webkit-based browser and-don-know why

--- a/src/private/index.html
+++ b/src/private/index.html
@@ -54,6 +54,8 @@
         style="text-decoration: none;">SVG-as-image</a></li>
       <li><a href="Z6310H.html"
         style="text-decoration: none;">Site issue with touch</a></li>
+      <li><a href="mobile-parallax.html"
+        style="text-decoration: none;">Mobile parallax</a></li>
     </ul>
   </body>
 </html>
